[package]
name = "download_file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
futures = "0.3.28"
futures-util = "0.3.28"
indicatif = { version = "0.17.3", features = ["rayon"] }
reqwest = { version = "0.11.16", features = ["stream"] }
tokio = { version = "1.28.0", features = ["rt-multi-thread", "macros", "fs"] }
